@@ -24,8 +24,8 @@
 package org.humanbrainproject.knowledgegraph.indexing.api;
 
 import com.github.jsonldjava.core.JsonLdError;
-import io.swagger.annotations.Api;
-import io.swagger.annotations.ApiOperation;
+import io.swagger.v3.oas.annotations.Operation;
+import io.swagger.v3.oas.annotations.tags.Tag;
 import org.humanbrainproject.knowledgegraph.annotations.ToBeTested;
 import org.humanbrainproject.knowledgegraph.commons.InternalApi;
 import org.humanbrainproject.knowledgegraph.commons.api.RestUtils;
@@ -39,7 +39,7 @@ import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.*;
 
-import javax.ws.rs.core.MediaType;
+import jakarta.ws.rs.core.MediaType;
 import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
 import java.time.format.DateTimeFormatter;
@@ -49,7 +49,7 @@ import static org.humanbrainproject.knowledgegraph.commons.api.ParameterConstant
 @RestController
 @RequestMapping(value = "/internal/indexing")
 @InternalApi
-@Api(value="/internal/indexing", description = "The indexing api - triggers the indexing of the incoming messages. ATTENTION: These operations are executed with full DB rights! Be sure, you protect these API endpoints accordingly!")
+@Tag(name="/internal/indexing", description = "The indexing api - triggers the indexing of the incoming messages. ATTENTION: These operations are executed with full DB rights! Be sure, you protect these API endpoints accordingly!")
 @ToBeTested(easy = true)
 public class IndexingInternalAPI {
 
@@ -66,9 +66,9 @@ public class IndexingInternalAPI {
     }
 
 
-    @ApiOperation("Index the creation of a new instance")
+    @Operation(summary = "Index the creation of a new instance")
     @PostMapping(value="/{"+ ORG+"}/{"+DOMAIN+"}/{"+SCHEMA+"}/{"+VERSION+"}/{"+ID+"}", consumes = {MediaType.APPLICATION_JSON, RestUtils.APPLICATION_LD_JSON}, produces = MediaType.APPLICATION_JSON)
-    public ResponseEntity<String> addInstance(@RequestBody String payload, @PathVariable(ORG) String organization, @PathVariable(DOMAIN) String domain, @PathVariable(SCHEMA) String schema, @PathVariable(VERSION) String schemaVersion, @PathVariable(ID) String id, @RequestParam(value = "authorId", required = false) String authorId, @RequestParam(value = "eventDateTime", required = false) String timestamp) {
+    public ResponseEntity<String> addInstance(@RequestBody String payload, @PathVariable(ORG) String organization, @PathVariable(DOMAIN) String domain, @PathVariable(SCHEMA) String schema, @PathVariable(VERSION) String schemaVersion, @PathVariable(ID) String id, @RequestParam(required = false) String authorId, @RequestParam(value = "eventDateTime", required = false) String timestamp) {
         authorizationContext.setMasterCredential();
 
         NexusInstanceReference path = new NexusInstanceReference(organization, domain, schema, schemaVersion, id).setRevision(1);
@@ -79,17 +79,17 @@ public class IndexingInternalAPI {
             indexer.insert(message);
             return ResponseEntity.ok(null);
         } catch (JsonLdError e) {
-            logger.warn(String.format("INS: Was not able to process the payload %s", payload), e);
+            logger.warn("INS: Was not able to process the payload %s".formatted(payload), e);
             return ResponseEntity.badRequest().body(e.getMessage());
         } catch(Exception e){
-            logger.error(String.format("INS: Was not able to insert the instance %s with the payload %s", path.getRelativeUrl().getUrl(), payload), e);
+            logger.error("INS: Was not able to insert the instance %s with the payload %s".formatted(path.getRelativeUrl().getUrl(), payload), e);
             throw new RuntimeException(e);
         }
     }
 
-    @ApiOperation("Index the update of an existing instance in a specific revision")
+    @Operation(summary = "Index the update of an existing instance in a specific revision")
     @PutMapping(value="/{"+ ORG+"}/{"+DOMAIN+"}/{"+SCHEMA+"}/{"+VERSION+"}/{"+ID+"}/{"+REV+"}", consumes = {MediaType.APPLICATION_JSON, RestUtils.APPLICATION_LD_JSON}, produces = MediaType.APPLICATION_JSON)
-    public ResponseEntity<String> updateInstance(@RequestBody String payload, @PathVariable(ORG) String organization, @PathVariable(DOMAIN) String domain, @PathVariable(SCHEMA) String schema, @PathVariable(VERSION) String schemaVersion, @PathVariable(ID) String id, @PathVariable(REV) Integer rev, @RequestParam(value = "authorId", required = false) String authorId, @RequestParam(value = "eventDateTime", required = false) String timestamp) {
+    public ResponseEntity<String> updateInstance(@RequestBody String payload, @PathVariable(ORG) String organization, @PathVariable(DOMAIN) String domain, @PathVariable(SCHEMA) String schema, @PathVariable(VERSION) String schemaVersion, @PathVariable(ID) String id, @PathVariable(REV) Integer rev, @RequestParam(required = false) String authorId, @RequestParam(value = "eventDateTime", required = false) String timestamp) {
         authorizationContext.setMasterCredential();
 
         NexusInstanceReference path = new NexusInstanceReference(organization, domain, schema, schemaVersion, id).setRevision(rev);
@@ -100,32 +100,32 @@ public class IndexingInternalAPI {
             indexer.update(message);
             return ResponseEntity.ok(null);
         } catch (JsonLdError  e) {
-            logger.warn(String.format("UPD: Was not able to process the payload %s", payload), e);
+            logger.warn("UPD: Was not able to process the payload %s".formatted(payload), e);
             return ResponseEntity.badRequest().body(e.getMessage());
         } catch(Exception e){
-            logger.error(String.format("UPD: Was not able to update the instance %s with the payload %s", path.getRelativeUrl().getUrl(), payload), e);
+            logger.error("UPD: Was not able to update the instance %s with the payload %s".formatted(path.getRelativeUrl().getUrl(), payload), e);
             e.printStackTrace();
             throw new RuntimeException(e);
         }
     }
-    @ApiOperation("Index the deletion of an existing instance")
+    @Operation(summary = "Index the deletion of an existing instance")
     @DeleteMapping(value="/{"+ ORG+"}/{"+DOMAIN+"}/{"+SCHEMA+"}/{"+VERSION+"}/{"+ID+"}", produces = MediaType.APPLICATION_JSON)
-    public ResponseEntity<String> deleteInstance(@PathVariable(ORG) String organization, @PathVariable(DOMAIN) String domain, @PathVariable(SCHEMA) String schema, @PathVariable(VERSION) String schemaVersion, @PathVariable(ID) String id, @RequestAttribute(value=REV, required = false) Integer rev, @RequestParam(value = "authorId", required = false) String authorId, @RequestParam(value = "eventDateTime", required = false) String timestamp) {
+    public ResponseEntity<String> deleteInstance(@PathVariable(ORG) String organization, @PathVariable(DOMAIN) String domain, @PathVariable(SCHEMA) String schema, @PathVariable(VERSION) String schemaVersion, @PathVariable(ID) String id, @RequestAttribute(value=REV, required = false) Integer rev, @RequestParam(required = false) String authorId, @RequestParam(value = "eventDateTime", required = false) String timestamp) {
         authorizationContext.setMasterCredential();
 
         NexusInstanceReference path = new NexusInstanceReference(organization, domain, schema, schemaVersion, id).setRevision(rev);
         logger.info("Received delete request for {} in rev {}", path.getRelativeUrl().getUrl(), rev);
         try {
             indexer.delete(path);
-            return ResponseEntity.ok(String.format("Successfully deleted the instance %s", path.getRelativeUrl().getUrl()));
+            return ResponseEntity.ok("Successfully deleted the instance %s".formatted(path.getRelativeUrl().getUrl()));
         }
         catch(Exception e){
-            logger.error(String.format("DEL: Was not able to delete the instance %s", path.getRelativeUrl().getUrl() ), e);
+            logger.error("DEL: Was not able to delete the instance %s".formatted(path.getRelativeUrl().getUrl()), e);
             throw new RuntimeException(e);
         }
     }
 
-    @ApiOperation("Remove everything in the index")
+    @Operation(summary = "Remove everything in the index")
     @DeleteMapping("/collections")
     public void clearGraph(){
         authorizationContext.setMasterCredential();
